# rust-syslog-heroku

./: Cargo.toml  LICENSE.txt  README.md
examples/: bench.rs
src/: facility.rs  lib.rs  message.rs  parser.rs  severity.rs
