[package]
name = "syslog_heroku"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Parser for Heroku (Logplex) syslog messages"
repository = "https://github.com/srijs/rust-syslog-heroku"
license = "ISC"
readme = "README.md"

[dependencies]
failure = "0.1.1"
chrono = "0.4.0"
